panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__preprocessor__include__split-macro-invocation__test_error_split_macro_invocation.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/preprocessor/include/split-macro-invocation/test_error_split_macro_invocation.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unexpected token `)` of kind `RParen`
   ╭─[panko/tests/cases/preprocessor/include/split-macro-invocation/second.h:1:5]
   │
 1 │ , 27)
   │     ┬  
   │     ╰── expected one of the following token kinds: [";", ","]
───╯

Error: missing closing parenthesis in function-like macro invocation
   ╭─[panko/tests/cases/preprocessor/include/split-macro-invocation/first.h:3:1]
   │
 3 │ MACRO(42
   │ ──┬──  
   │   ╰──── this macro misses a closing parenthesis
───╯

Error: argument count mismatch: too few arguments to function-like macro invocation (expected 2 but got 1)
   ╭─[panko/tests/cases/preprocessor/include/split-macro-invocation/first.h:3:1]
   │
 3 │ MACRO(42
   │ ──┬──  
   │   ╰──── this macro expects 2 arguments
───╯
